deploy/app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: vite-app
  namespace: vite-app
spec:
  selector:
    app: vite-app
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
